# musical-generative-models-conditioning

./: .env.sample  .gitignore  .gitmodules  LICENSE  Makefile  README.md  README.pl.md  docker-compose.yaml  justfile  pyproject.toml  startup_jarvis.sh
configs/: sweep_config.yaml  sweep_config_ex.yaml  sweep_config_example_nums.yaml  sweep_config_nums.yaml
data/: .gitignore  README.md
docs/: Makefile  README.md  audio_conditioning.md  autoresearch.md  conf.py  demo.md  how_to_experiments.md  index.rst  make.bat  papers_with_code.md  zotero.json
docs/autoresearch/: chosen.md  links.md  papers_with_code.md  previous.md
docs/autoresearch/summary/03-10/:  42_generative_music_evaluation.md  131_audio_synthetis.md  201_latest_cv_conditioning.md  576_latest_ai_conditioning.md  721_ai_conditioning.md  726_cv_conditioning.md  801_latest_update_music_conditioning.md  803_latest_music_conditioning.md  888_sound_conditioning.md  928_generative_metrics.md
docs/autoresearch/summary/13-09/:   9_sound_conditioning.md   89_cv_conditioning.md  158_generative_metrics.md  238_latest_music_conditioning.md  461_generative_music_evaluation.md  627_ai_conditioning.md  785_latest_update_music_conditioning.md
docs/autoresearch/summary/16-09/: 463_sound_conditioning.md  599_latest_ai_conditioning.md  790_latest_cv_conditioning.md  953_cv_conditioning.md
docs/autoresearch/summary/18-09/:  64_audio_synthetis.md  126_latest_ai_conditioning.md  179_ai_conditioning.md  179_latest_cv_conditioning.md  622_latest_update_music_conditioning.md  942_latest_music_conditioning.md
docs/autoresearch/summary/20-09/: 470_latest_cv_conditioning.md  575_sound_conditioning.md  591_latest_music_conditioning.md
docs/textual-inversion/: additional.md  textual_inversion_research.md
environ/audiocraft/: audiocraft.Dockerfile  pyproject.toml
environ/main/: pyproject.toml
environ/tools/: pyproject.toml
logs/: .gitignore  sweep_config.yaml
models/: .gitignore  29-small-20-novel-lamb.pt  README.md
notebooks/: 01-textual-inversion-evaluation.ipynb  README.md
notebooks/audiocraft/: 01-mir-analysis.ipynb  02-musicgen-textual-inversion.ipynb  demo.py
scripts/: ffmpeg-combine.sh  ffmpeg-resample-dir.sh  ffmpeg-split.sh  nextclout-download.sh  startup_jarvis.sh  upload-file.sh  yt-dlp-download.sh
src/app/: app.py  prepare.py  pyproject.toml
src/audiocraft/: 02-musicgen-textual-inversion.ipynb  03-musicgen-contrastive-textual-inversion.ipynb  04-musicgen-metrics.ipynb  05-musicgen-lightning.ipynb  06-musicgen-lightning.ipynb  07-song-describer-ds-eda.ipynb  07-song-describer-ds-enrich.ipynb  08-concept-factory.ipynb  09-inversion+style.ipynb  10-encodec-data-insight.ipynb  11-eval-metrics.ipynb  12-clip-musicgen.ipynb  13-wandb-data.ipynb  README.md  prepare_dataset.py  pyproject.toml
src/audiocraft/musicgen/: callbacks.py  data.py  data_const.py  encode_music.py  eval.py  generate.py  img_feature_extractor.py  metrics.py  model.py  trainer.py
src/audiocraft/notebooks/: 02-musicgen-textual-inversion.ipynb  util_tools.py
src/audiocraft/src/: app_trainer.py  callbacks.py  clip_textual_inversion.py  create_dataset.py  data.py  data_const.py  encode_music.py  eval.py  generate.py  jamendo_utils.py  losses.py  metrics.py  model.py  music_to_concept.py  trainer.py  util_tools.py  utils.py
src/audiocraft/tests/: test_data.py  test_model.py
src/data/: nextcloud.py
src/paper-query/: autoresearch.md  docker-compose.yaml  go.mod  go.sum  main.go  queries.json
src/paper-query/summary/01-11/: 536_textual_inversion_abs.md  738_textual_inversion.md
src/paper-query/summary/09-11/: 632_music_datasets.md  683_music_datasets.md
src/paper-query/summary/18-10/: 184_textual_inversion.md  649_textual_inversion_abs.md
src/paper-query/summary/29-10/: 816_textual_inversion_submit.md  996_textual_inversion_abs.md
src/tools/: nextcloud.py  pyproject.toml
src/tools/src/tools/: nextcloud.py  xp.py
src/tools/tools/: nextcloud.py  project.py
