[tool.poetry]
name = "conditioning-of-musical-generative-models"
version = "0.1.0"
description = ""
authors = ["Mikolaj Szawerda"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tools = {path='src/tools'}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
