[tool.poetry]
name = "inversion_app"
version = "0.1.0"
description = ""
authors = ["mikolaj.szawerda@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
musicgen = { path = "../audiocraft" }
gradio = "^5.12.0"
watchfiles = "^1.0.4"
petname = "^2.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
