[tool.poetry]
name = "musicgen"
version = "0.1.0"
description = ""
authors = ["mikolaj.szawerda@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "<2.0"
torch = "2.1.0"
audiocraft = "^1.3.0"
notebook = "^7.2.2"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
torchviz = "^0.0.2"
datasets = "^3.0.1"
pytorch-lightning = "^2.4.0"
umap-learn = "^0.5.6"
seaborn = "^0.13.2"
protobuf = "3.20.*"
tensorboard = "^2.18.0"
tools = {path='../tools'}
pytorch-metric-learning = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
