[tool.poetry]
name = "musicgen"
version = "0.1.10"
description = ""
authors = ["Mikolaj Szawerda <mikolaj.szawerda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "<2.0"
torch = "2.1.0"
audiocraft = { path = "../meta_audiocraft" }
notebook = "^7.2.2"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
torchviz = "^0.0.2"
datasets = "^3.0.1"
pytorch-lightning = "^2.4.0"
umap-learn = "^0.5.6"
seaborn = "^0.13.2"
protobuf = "3.20.*"
tensorboard = "^2.18.0"
tools = { path = '../tools' }
pytorch-metric-learning = "^2.6.0"
audioldm-eval = { git = "https://github.com/haoheliu/audioldm_eval" }
resampy = "^0.4.3"
audiomentations = "^0.37.0"
lightning = "^2.4.0"
hydra-core = "^1.3.2"
huggingface-hub = { extras = ["cli"], version = "^0.26.2" }
chromadb = "^0.5.18"
sentence-transformers = "^3.3.0"
openai = "^1.54.4"
yt-dlp = { extras = ["default"], version = "^2024.11.18" }
wandb = "^0.18.7"
netron = "^8.0.3"
faiss-gpu = { version = "^1.7.2", markers = "sys_platform == 'linux'" }
faiss-cpu = { version = "^1.7.2", markers = "sys_platform == 'darwin'" }
msclap = "^1.3.3"
toolz = "^1.0.0"
black = "^24.10.0"
pytest = "^8.3.4"
clip = { git = "https://github.com/openai/CLIP.git" }
fadtk = "^1.0.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
